# TunSafe

./: build_config.h  ip_to_peer_map.cpp  netapi.h  network_bsd.cpp  network_bsd.h  network_common.cpp  network_common.h  network_win32.cpp  network_win32.h  network_win32_tcp.cpp  network_win32_tcp.h  tunsafe_amalgam.cpp  tunsafe_bsd.cpp  tunsafe_bsd.h  tunsafe_config.h  tunsafe_wg_plugin.cpp  tunsafe_wg_plugin.h  wg_plugin_dummy.cpp  wireguard.cpp  wireguard.h  wireguard_config.cpp  wireguard_config_ext.cpp  wireguard_config_ext.h  wireguard_proto.cpp  wireguard_proto.h
.github/workflows/: release.yml
android/: CMakeLists.txt  inject_so.sh  network_android.cpp  tunsafe_android.cpp  tunsafe_jni.cpp
